2007-02-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, cannot wait for Enter
	in "pause -1" in a non-interactive session without the graph window.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, wait for Enter in console
	instead for a mouse click in a special window if the graph window is
	not (yet) present.

2007-02-09  Ethan Merritt  <merritt@u.washington.edu>

	* term/README: Fix confusing typo in TERM_TABLE layout description.

2007-02-10  Petr Mikulik  <mikulik@physics.muni.cz>

	SF #1651350 win terminal: pause mouse key|any does not work

	* src/mouse.c (event_keypress): Kill pending Pause dialog.

	* src/win/wpause.c (PauseBox): Don't show "OK CANCEL" dialog when
	pausing for mouse.

2007-02-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_point): Point type 1 was incorrectly drawn as a dot.
	Bug #1656433

2007-02-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/plot.c (main): Flag 'interactive' not reset to FALSE after running
	command "gnuplot - nonExistingScript.gp". On some platforms, gnuplot
	cannot 'exit' and goes to an infinite loop after Ctrl-D.
	Bug #1612995 

2007-02-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Add a dummy label for "3 data style" to avoid bug
	in doc2gih (try "help contour").

2007-02-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c (eval_3dplots): Improved message for non-grid data. 

2007-01-31  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (ENHGD_FLUSH): libgd 2.0.34 will allow explicit request
	for Adobe Symbol font encoding.  Make use of this to handle transient
	use of Symbol font in enhanced text.  Does not affect older gd versions.

2007-01-29  Per Persson <persquare@mac.com>

	* configure.in: Testing libreadline for remove_history presence 
	instead of readline to avoid incompatible libedit wrapper.
	
2007-01-26  Petr Mikulik  <mikulik@physics.muni.cz>
